yaml/deployment-project002.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project002
spec:
  selector:
    matchLabels:
      app: project002
  replicas: 1
  template:
    metadata:
      labels:
        app: project002
    spec:
      containers:
      - name: project002
        image: sidartasilva/project002:latest
