yaml/service-project001.yaml
apiVersion: v1
kind: Service
metadata:
  name: project001

spec:
  selector:
    app: project001

  ports:
    - name: http
      port: 8080
  type: NodePort
