yaml/service-project002.yaml
apiVersion: v1
kind: Service
metadata:
  name: project002

spec:
  selector:
    app: project002

  ports:
    - name: http
      port: 8081
  type: NodePort
