yaml/ingress-public.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public-routing
spec:
  rules:
    - host: hello.sidartasilva.io
      http:
        paths:
          - path: /
            backend:
              serviceName: project001
              servicePort: 8080
