yaml/ingress-secure.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: secure-routing
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: mycredentials
    nginx.ingress.kubernetes.io/auth-realm: "Get lost unless you have a password"
spec:
  rules:
    - host: consumer.hello.sidartasilva.io
      http:
        paths:
          - path: /
            backend:
              serviceName: project002
              servicePort: 8081
